[gd_scene load_steps=22 format=2]

[ext_resource path="res://Actor/Actor.tscn" type="PackedScene" id=1]
[ext_resource path="res://Actor/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Actor/Player/Player_state_machine/Player_state_machine.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://Actor/Player/Player_state_machine/Player_state/Idle.gd" type="Script" id=5]
[ext_resource path="res://Actor/Player/Player_state_machine/Player_state/Run.gd" type="Script" id=6]
[ext_resource path="res://Actor/Player/Player_state_machine/Player_state/Fall.gd" type="Script" id=7]
[ext_resource path="res://Actor/Player/Player_state_machine/Player_state/Jump.gd" type="Script" id=8]
[ext_resource path="res://Actor/Player/Player_state_machine/Player_state/Substates/Check_double_state.gd" type="Script" id=9]
[ext_resource path="res://Actor/Player/Player_stats/Stats.gd" type="Script" id=10]
[ext_resource path="res://Actor/Player/Player_state_machine/Player_state/Abilites.gd" type="Script" id=11]
[ext_resource path="res://Actor/Player/Player_state_machine/Player_state/Substates/ability_1.gd" type="Script" id=12]
[ext_resource path="res://Actor/Player/Player_state_machine/Player_state/Substates/ability_3.gd" type="Script" id=13]
[ext_resource path="res://Actor/Player/Player_state_machine/Player_state/Attack_ability.gd" type="Script" id=14]
[ext_resource path="res://Actor/Player/Player_state_machine/Player_state/Substates/ability_1_Attack.gd" type="Script" id=15]
[ext_resource path="res://Actor/Player/Player_state_machine/Player_state/Substates/ability_3_Attack.gd" type="Script" id=16]
[ext_resource path="res://Actor/Player/Player_state_machine/Player_state/Substates/ability_2_Attack.gd" type="Script" id=17]
[ext_resource path="res://Actor/Player/Player_state_machine/Player_state/Attack.gd" type="Script" id=18]

[sub_resource type="Animation" id=1]
resource_name = "emit_slow_motion"
length = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath("Double_jump/ability_2")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "add_slow_motion"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.01
tracks/0/type = "method"
tracks/0/path = NodePath("../Finite_state_machine/Double_jump/ability_2")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_slow_motion"
} ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 194.094

[node name="Player" instance=ExtResource( 1 )]
position = Vector2( 83.9052, 126.232 )
script = ExtResource( 2 )

[node name="Stats" type="Node2D" parent="." index="0"]
script = ExtResource( 10 )

[node name="Finite_state_machine" type="Node" parent="." index="1"]
script = ExtResource( 3 )

[node name="Idle" type="Node" parent="Finite_state_machine" index="0"]
script = ExtResource( 5 )

[node name="Run" type="Node" parent="Finite_state_machine" index="1"]
script = ExtResource( 6 )

[node name="Jump" type="Node" parent="Finite_state_machine" index="2"]
script = ExtResource( 8 )

[node name="Double_jump" type="Node" parent="Finite_state_machine" index="3"]
script = ExtResource( 11 )
stats_path = NodePath("../../Stats")

[node name="ability_1" type="Node" parent="Finite_state_machine/Double_jump" index="0" groups=[
"Bullet_spwaner",
]]
script = ExtResource( 12 )
parent_path = NodePath("../../..")

[node name="ability_2" type="Node" parent="Finite_state_machine/Double_jump" index="1" groups=[
"Slowmotion",
"State",
]]
script = ExtResource( 9 )
parent_path = NodePath("../../..")

[node name="ability_3" type="Node" parent="Finite_state_machine/Double_jump" index="2"]
script = ExtResource( 13 )
parent_path = NodePath("../../..")

[node name="Fall" type="Node" parent="Finite_state_machine" index="4"]
script = ExtResource( 7 )

[node name="Attack_Ability" type="Node" parent="Finite_state_machine" index="5"]
script = ExtResource( 14 )

[node name="ability_1" type="Node" parent="Finite_state_machine/Attack_Ability" index="0"]
script = ExtResource( 15 )
parent_path = NodePath("../../..")

[node name="ability_2" type="Node" parent="Finite_state_machine/Attack_Ability" index="1" groups=[
"Slowmotion",
]]
script = ExtResource( 17 )
parent_path = NodePath("../../..")

[node name="Timer" type="Timer" parent="Finite_state_machine/Attack_Ability/ability_2" index="0"]

[node name="ability_3" type="Node" parent="Finite_state_machine/Attack_Ability" index="2"]
script = ExtResource( 16 )
parent_path = NodePath("../../..")

[node name="Attack" type="Node" parent="Finite_state_machine" index="6"]
script = ExtResource( 18 )

[node name="Timer" type="Timer" parent="Finite_state_machine/Attack" index="0"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Finite_state_machine" index="7"]
anims/emit_slow_motion = SubResource( 1 )

[node name="Sprite" parent="Body" index="0"]
texture = ExtResource( 4 )

[node name="AnimationPlayer" parent="Body" index="1"]
anims/initiate_double_jump = SubResource( 2 )

[node name="Areas" type="Node2D" parent="." index="4"]

[node name="Detect_area" type="Area2D" parent="Areas" index="0"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/Detect_area" index="0"]
shape = SubResource( 3 )
disabled = true

[connection signal="timeout" from="Finite_state_machine/Attack_Ability/ability_2/Timer" to="Finite_state_machine/Attack_Ability/ability_2" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Areas/Detect_area" to="Finite_state_machine/Attack_Ability/ability_2" method="_on_Detect_area_body_entered"]
